# nibLib

./: .gitignore  README.md  build_glyphs_plugin.sh  setup.cfg
DrawBot/: Ellipse.py  EllipseSuper.py  simon.txt
LICENSE.md/: LICENSE.md
NibSimulator.glyphsReporter/Contents/: Info.plist
NibSimulator.glyphsReporter/Contents/Resources/: plugin.py
demo/: NibSimulator.glyphs
demo/NibSimulator.ufo/: fontinfo.plist  lib.plist
demo/NibSimulator.ufo/glyphs/: c.glif  ccedilla.glif  contents.plist  l.glif  m.glif  n.glif  o.glif  ograve.glif
demo/NibSimulator.ufo/glyphs.background/: c.glif  ccedilla.glif  contents.plist  l.glif  m.glif  n.glif  o.glif  ograve.glif
dev_script_robofont/: Nib Simulator.py
lib/: NibLibRF.py  RFDev.py
lib/nibLib/: __init__.py  geometry.py  typing.py
lib/nibLib/pens/: __init__.py  bezier.py  drawing.py  fakeOvalNibPen.py  nibPen.py  ovalNibPen.py  rectNibPen.py  superellipseNibPen.py
lib/nibLib/ui/: __init__.py  glyphs.py  robofont.py
scripts/: Glyphs - Add nib guide layer from background.py  NibLibG.py  NibLibRF.py
tests/: geometry_test.py
