[metadata]
name = nibLib
version = 0.1.0
description = Nib simulation for font editors
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://www.kutilek.de/
author = Jens Kutilek
classifiers =
    Programming Language :: Python :: 3
    Operating System :: Mac OS
    Environment :: Plugins

[options]
zip_safe = False
package_dir=
    =lib
packages=find:
platforms = any
install_requires =
    defconappkit @ git+https://github.com/robotools/defconAppKit.git
    fontTools >= 4.47.4
python_requires = >=3.8

[options.packages.find]
where=lib

[bdist_wheel]
universal = 1

[flake8]
select = B, C, E, F, W, T4, B9
# last two ignores: * imports, unused imports
# ignore = E203, E266, E501, W503, E741, F403, F401
max-line-length = 88
max-complexity = 19
exclude = .git, __pycache__, build, dist, .eggs, .tox
